--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/index.css">
     <title>QuizGame</title>
   </head>
-  <body class="w-full font-sans text-pirmary-color bg-main-bg">
-    <div id="root"></div>
+  <body class="w-screen h-screen font-sans text-primary-color bg-main-bg">
+      <h1 class="text-3xl font-bold text-center">Tailwind Test</h1>
+    <div id="root">
+     
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
