--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/index.css">
+     <!-- Material Symbols -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>QuizGame</title>
   </head>
-  <body class="w-screen h-screen font-sans text-primary-color bg-main-bg">
-      <h1 class="text-3xl font-bold text-center">Tailwind Test</h1>
-    <div id="root">
-     
-    </div>
+  <body class="w-full h-full font-sans text-primary-color bg-main-bg">
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
