--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>QuizGame</title>
   </head>
-  <body class="w-full h-full font-sans text-primary-color bg-main-bg">
+  <body class="w-full h-full font-PressStartBold font-bold text-primary-color bg-main-bg">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
